--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,33 @@
+@charset "utf-8";
+
+
+
+table{
+    font-family: 'ヒラギノ丸ゴ ProN','Hiragino Maru Gothic ProN',serif; 
+}
+
+table thead tr{
+    background-color: #FFC107;
+    color:#000;
+}
+
+table tbody tr:hover{
+    background-color: rgb(255, 248, 228);
+}
+
+/* table tbody td:hover{
+    background-color: rgb(255, 248, 228);
+    font-size: .8em;
+} */
+
+select{
+    color: rgb(0, 0, 0);
+    background-color: #ffffff;
+    cursor: pointer;
+    position: relative;
+    font-size: 16px;
+}
+
 .battle_table{
     padding-bottom: 150px;
 }
@@ -18,16 +48,16 @@
     border: 1px solid #000000;  /* 枠線 */
 }
 
+
+
 .result{
+    padding: 10px;
     background: rgb(255, 224, 85);
     display: flex !important;
     position: fixed !important;
     width: 100%;
-    height: 150px;
+    height: 200px;
     bottom: 0px;
     text-align: center;
 }
 
-/* .rate{
-    text-align: center;
-} */
