レイアウト修正

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@
 
 
 table{
-    font-family: 'ヒラギノ丸ゴ ProN','Hiragino Maru Gothic ProN',serif; 
+    font-family: 'ヒラギノ丸ゴ ProN','Hiragino Maru Gothic ProN','メイリオ', Meiryo,sans-serif;
 }
 
 table thead tr{
