--- a/css/styles.css
+++ b/css/styles.css
@@ -1,24 +1,21 @@
-@charset "utf-8";
-
-
+@font-face {
+	font-family: 'GenJyuuGothic';
+	src: url('genjyuugothic-20150607/GenJyuuGothic-Medium.ttf');
+}
 
 table{
-    font-family: 'ヒラギノ丸ゴ ProN','Hiragino Maru Gothic ProN','メイリオ', Meiryo,sans-serif;
+    font-family: 'ヒラギノ丸ゴ ProN','Hiragino Maru Gothic ProN','GenJyuuGothic',sans-serif;
 }
 
 table thead tr{
     background-color: #FFC107;
     color:#000;
+    border-color: #000;
 }
 
 table tbody tr:hover{
     background-color: rgb(255, 248, 228);
 }
-
-/* table tbody td:hover{
-    background-color: rgb(255, 248, 228);
-    font-size: .8em;
-} */
 
 select{
     color: rgb(0, 0, 0);
@@ -29,11 +26,11 @@ select{
 }
 
 .battle_table{
-    padding-bottom: 150px;
+    padding-bottom: 200px;
 }
 
 .battle_before_rate {
-    border: 2px solid #ffaa00;  /* 枠線 */
+    border: 2px solid #000000;  /* 枠線 */
 }
 
 .battle_rate {
@@ -48,8 +45,6 @@ select{
     border: 1px solid #000000;  /* 枠線 */
 }
 
-
-
 .result{
     padding: 10px;
     background: rgb(255, 224, 85);
@@ -60,4 +55,3 @@ select{
     bottom: 0px;
     text-align: center;
 }
-
