簡易版のテーブルレイアウト修正

--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@
 table{
     font-family: 'ヒラギノ丸ゴ ProN','Hiragino Maru Gothic ProN','GenJyuuGothic',sans-serif;
     /* table-layout: fixed; */
+    text-align: center;
 }
 
 /* th{
