--- a/css/styles.css
+++ b/css/styles.css
@@ -66,6 +66,17 @@ select{
     text-align: center;
 }
 
+.smb35-result{
+    padding: 10px;
+    background: rgb(255, 224, 85);
+    display: flex !important;
+    position: fixed !important;
+    width: 100%;
+    height: 350px;
+    bottom: 0px;
+    text-align: center;
+}
+
 .cookie_save{
     padding: 10px;
     background: rgb(252, 159, 108);
